package com.mrathena.design.pattern.creation.simple.factory.pattern.implement;

/**
 * @author mrathena on 2020/1/8 14:16
 */
public interface Product {
}
