@startuml

abstract class Product
class ConcreteProductA extends Product
class ConcreteProductB extends Product
abstract class Factory {
    + Product getProduct()
}
class ConcreteFactoryA extends Factory {
    + Product getProduct()
}
class ConcreteFactoryB extends Factory {
    + Product getProduct()
}
Factory ..> Product
ConcreteFactoryA ..> Product
ConcreteFactoryB ..> Product
ConcreteFactoryA ..> ConcreteProductA
ConcreteFactoryB ..> ConcreteProductB

@enduml